# mcp-taobao-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build-release.yaml
src/mcp_taobao_server/: __init__.py  server.py
