[project]
name = "mcp-taobao-server"
version = "2.0.0"
description = "MCP Taobao Server - 淘宝闪购/饿了么外卖(搜店/加购/生成待支付订单,浏览器自动化,人工付款)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ganyu" }]
keywords = ["mcp", "taobao", "shangou", "eleme", "waimai", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.44.0",
]

[project.optional-dependencies]
sse = ["starlette>=0.37.0", "uvicorn>=0.30.0"]

[project.scripts]
mcp-taobao-server = "mcp_taobao_server.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_taobao_server"]
